Release Version 1.1.0 rwrite done for structrue and added openapi spec
